--- a/MyVVirtualTourist/StoryBoards/Base.lproj/Main.storyboard
+++ b/MyVVirtualTourist/StoryBoards/Base.lproj/Main.storyboard
@@ -36,10 +36,15 @@
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="a7P-de-cH3">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
+                                <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="375" id="Fxe-kP-IfK"/>
                                     <constraint firstAttribute="height" constant="603" id="Qca-oZ-fqL"/>
                                 </constraints>
+                                <connections>
+                                    <outlet property="delegate" destination="FiH-Va-eR2" id="9Ox-ou-oTi"/>
+                                    <outletCollection property="gestureRecognizers" destination="4Ps-T3-uu8" appends="YES" id="Qnv-06-4kh"/>
+                                </connections>
                             </mapView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jSX-jU-rpd" userLabel="Footer View">
                                 <rect key="frame" x="0.0" y="617" width="375" height="50"/>
@@ -80,6 +85,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BF0-Gt-cZx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <pongPressGestureRecognizer allowableMovement="10" minimumPressDuration="0.5" id="4Ps-T3-uu8">
+                    <connections>
+                        <action selector="handleLongPressGesture:" destination="l9Q-fe-4LX" id="tsO-zR-PiE"/>
+                    </connections>
+                </pongPressGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="-82.400000000000006" y="132.68365817091455"/>
         </scene>
