--- a/MyVVirtualTourist/StoryBoards/Base.lproj/Main.storyboard
+++ b/MyVVirtualTourist/StoryBoards/Base.lproj/Main.storyboard
@@ -82,6 +82,7 @@
                     <connections>
                         <outlet property="footer" destination="jSX-jU-rpd" id="Wjm-zn-egW"/>
                         <outlet property="mapView" destination="a7P-de-cH3" id="Y8u-XX-827"/>
+                        <segue destination="vzy-vG-LjT" kind="show" identifier="displayAlbum" id="PbF-QZ-t4c"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="BF0-Gt-cZx" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -91,7 +92,54 @@
                     </connections>
                 </pongPressGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="-82.400000000000006" y="132.68365817091455"/>
+            <point key="canvasLocation" x="14" y="134"/>
+        </scene>
+        <!--Photo Album View Controller-->
+        <scene sceneID="PcX-3z-mz7">
+            <objects>
+                <viewController id="vzy-vG-LjT" customClass="PhotoAlbumViewController" customModule="MyVVirtualTourist" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ghn-bY-4Hj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="E0N-Od-uCo">
+                                <rect key="frame" x="0.0" y="64" width="375" height="128"/>
+                            </mapView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qXv-Jo-6Jo">
+                                <rect key="frame" x="0.0" y="190" width="136" height="130"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="02U-Vi-lsg">
+                                <rect key="frame" x="177" y="455" width="20" height="20"/>
+                            </activityIndicatorView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jr5-Ao-dbT">
+                                <rect key="frame" x="166" y="492" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="E0N-Od-uCo" firstAttribute="leading" secondItem="ghn-bY-4Hj" secondAttribute="leading" id="8FN-K2-cje"/>
+                            <constraint firstItem="Jr5-Ao-dbT" firstAttribute="leading" secondItem="GJC-Gh-kVz" secondAttribute="leading" constant="166" id="Bc4-cf-TyB"/>
+                            <constraint firstItem="GJC-Gh-kVz" firstAttribute="bottom" secondItem="Jr5-Ao-dbT" secondAttribute="bottom" constant="154" id="Dxg-sC-bIa"/>
+                            <constraint firstAttribute="trailing" secondItem="E0N-Od-uCo" secondAttribute="trailing" id="GgF-az-ipm"/>
+                            <constraint firstItem="E0N-Od-uCo" firstAttribute="top" secondItem="GJC-Gh-kVz" secondAttribute="top" id="QUR-fL-FrY"/>
+                            <constraint firstItem="GJC-Gh-kVz" firstAttribute="bottom" secondItem="02U-Vi-lsg" secondAttribute="bottom" constant="192" id="SK9-Oz-zrU"/>
+                            <constraint firstItem="GJC-Gh-kVz" firstAttribute="trailing" secondItem="02U-Vi-lsg" secondAttribute="trailing" constant="178" id="UdJ-Qi-rXN"/>
+                            <constraint firstItem="GJC-Gh-kVz" firstAttribute="trailing" secondItem="Jr5-Ao-dbT" secondAttribute="trailing" constant="167" id="X49-4M-k4g"/>
+                            <constraint firstItem="02U-Vi-lsg" firstAttribute="top" secondItem="GJC-Gh-kVz" secondAttribute="top" constant="391" id="lrb-DY-l8t"/>
+                            <constraint firstItem="GJC-Gh-kVz" firstAttribute="bottom" secondItem="E0N-Od-uCo" secondAttribute="bottom" constant="475" id="pou-eb-5Qc"/>
+                            <constraint firstItem="Jr5-Ao-dbT" firstAttribute="top" secondItem="GJC-Gh-kVz" secondAttribute="top" constant="428" id="wK6-cl-Nd0"/>
+                            <constraint firstItem="02U-Vi-lsg" firstAttribute="leading" secondItem="GJC-Gh-kVz" secondAttribute="leading" constant="177" id="x4b-cU-qM4"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="GJC-Gh-kVz"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="icx-HL-xXR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="744.79999999999995" y="132.68365817091455"/>
         </scene>
     </scenes>
 </document>
