--- a/MyVVirtualTourist/StoryBoards/Base.lproj/Main.storyboard
+++ b/MyVVirtualTourist/StoryBoards/Base.lproj/Main.storyboard
@@ -102,40 +102,59 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="E0N-Od-uCo">
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="E0N-Od-uCo">
                                 <rect key="frame" x="0.0" y="64" width="375" height="128"/>
-                            </mapView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="qXv-Jo-6Jo">
-                                <rect key="frame" x="0.0" y="190" width="136" height="130"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                            </imageView>
-                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="02U-Vi-lsg">
-                                <rect key="frame" x="177" y="455" width="20" height="20"/>
-                            </activityIndicatorView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jr5-Ao-dbT">
-                                <rect key="frame" x="166" y="492" width="42" height="21"/>
+                            </mapView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="ckE-IR-d1o">
+                                <rect key="frame" x="0.0" y="192" width="110" height="130"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Bcx-6o-Lq2">
+                                    <size key="itemSize" width="111.5" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="PhotoViewCell" id="ZQE-wd-ebW">
+                                        <rect key="frame" x="-1" y="0.0" width="111.5" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="111.5" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="y6C-kR-YRP">
+                                                    <rect key="frame" x="45" y="54" width="20" height="20"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </activityIndicatorView>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rd4-Vx-RMb">
+                                                    <rect key="frame" x="1" y="0.0" width="110" height="130"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zrw-jx-hQZ" userLabel="Status">
+                                <rect key="frame" x="166" y="451" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="W7u-Gz-bCL">
+                                <rect key="frame" x="177" y="412" width="20" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </activityIndicatorView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="E0N-Od-uCo" firstAttribute="leading" secondItem="ghn-bY-4Hj" secondAttribute="leading" id="8FN-K2-cje"/>
-                            <constraint firstItem="Jr5-Ao-dbT" firstAttribute="leading" secondItem="GJC-Gh-kVz" secondAttribute="leading" constant="166" id="Bc4-cf-TyB"/>
-                            <constraint firstItem="GJC-Gh-kVz" firstAttribute="bottom" secondItem="Jr5-Ao-dbT" secondAttribute="bottom" constant="154" id="Dxg-sC-bIa"/>
-                            <constraint firstAttribute="trailing" secondItem="E0N-Od-uCo" secondAttribute="trailing" id="GgF-az-ipm"/>
-                            <constraint firstItem="E0N-Od-uCo" firstAttribute="top" secondItem="GJC-Gh-kVz" secondAttribute="top" id="QUR-fL-FrY"/>
-                            <constraint firstItem="GJC-Gh-kVz" firstAttribute="bottom" secondItem="02U-Vi-lsg" secondAttribute="bottom" constant="192" id="SK9-Oz-zrU"/>
-                            <constraint firstItem="GJC-Gh-kVz" firstAttribute="trailing" secondItem="02U-Vi-lsg" secondAttribute="trailing" constant="178" id="UdJ-Qi-rXN"/>
-                            <constraint firstItem="GJC-Gh-kVz" firstAttribute="trailing" secondItem="Jr5-Ao-dbT" secondAttribute="trailing" constant="167" id="X49-4M-k4g"/>
-                            <constraint firstItem="02U-Vi-lsg" firstAttribute="top" secondItem="GJC-Gh-kVz" secondAttribute="top" constant="391" id="lrb-DY-l8t"/>
-                            <constraint firstItem="GJC-Gh-kVz" firstAttribute="bottom" secondItem="E0N-Od-uCo" secondAttribute="bottom" constant="475" id="pou-eb-5Qc"/>
-                            <constraint firstItem="Jr5-Ao-dbT" firstAttribute="top" secondItem="GJC-Gh-kVz" secondAttribute="top" constant="428" id="wK6-cl-Nd0"/>
-                            <constraint firstItem="02U-Vi-lsg" firstAttribute="leading" secondItem="GJC-Gh-kVz" secondAttribute="leading" constant="177" id="x4b-cU-qM4"/>
-                        </constraints>
                         <viewLayoutGuide key="safeArea" id="GJC-Gh-kVz"/>
                     </view>
+                    <connections>
+                        <outlet property="mapView" destination="E0N-Od-uCo" id="AR4-8Y-rds"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="icx-HL-xXR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
