--- a/MyVVirtualTourist/StoryBoards/Base.lproj/Main.storyboard
+++ b/MyVVirtualTourist/StoryBoards/Base.lproj/Main.storyboard
@@ -133,7 +133,7 @@
                                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                         </collectionViewFlowLayout>
                                         <cells>
-                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" reuseIdentifier="PhotoViewCell" id="hQb-6O-h5M" customClass="PhotoViewCell" customModule="MyVVirtualTourist" customModuleProvider="target">
+                                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" misplaced="YES" reuseIdentifier="PhotoCell" id="hQb-6O-h5M" customClass="PhotoCell" customModule="MyVVirtualTourist" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="150" height="150"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -158,8 +158,8 @@
                                                     <constraint firstItem="6oL-sY-bQs" firstAttribute="top" secondItem="hQb-6O-h5M" secondAttribute="top" id="rwi-T2-xNW"/>
                                                 </constraints>
                                                 <connections>
-                                                    <outlet property="activityIndicator" destination="hpx-OQ-7FI" id="Q6k-sB-lUo"/>
-                                                    <outlet property="imageView" destination="6oL-sY-bQs" id="Nhq-Nw-P3n"/>
+                                                    <outlet property="activityIndicator" destination="hpx-OQ-7FI" id="Ve2-3Z-6Qo"/>
+                                                    <outlet property="imageView" destination="6oL-sY-bQs" id="Zto-CE-pHp"/>
                                                 </connections>
                                             </collectionViewCell>
                                         </cells>
